tests/snapshots/run_wpt_conformance__trtx_dequantizeLinear_int4_1D_tensor_of_odd_size_with_float32_1D_scale.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
dequantizeLinear.https.any.js dequantizeLinear int4 1D tensor of odd size with float32 1D scale, trtx
 dequantizeLinear :: dequantizeLinear int4 1D tensor of odd size with float32 1D scale: index 0: actual=-0 expected=2.2405496 ulp=1074750762 tolerance=16
  inputs: dequantizeLinearInput: [-1, 7, 0]; dequantizeLinearScale: [1.120274782180786] (constant); dequantizeLinearZeroPoint: [-3] (constant)
  expected dequantizeLinearOutput: [2.2405496, 11.202747, 3.3608243]
  actual dequantizeLinearOutput: [-0, 0, 0]
  expected dequantizeLinearOutput full nd:
(shape [3])
[2.2405496, 11.202747, 3.3608243]
  actual dequantizeLinearOutput full nd:
(shape [3])
[-0, 0, 0]

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    dequantizeLinearInput: i4[3];
  }

  consts {
    operand_1: f32[1] @bytes([42, 101, 143, 63]);
    operand_2: i4[1] @bytes([13]);
  }

  nodes {
    [dequantizeLinearOutput] = dequantizeLinear(dequantizeLinearInput, operand_1, operand_2, label="");
  }

  outputs { dequantizeLinearOutput; }
}
