tests/snapshots/run_wpt_conformance__trtx_dequantizeLinear_int8_0D_constant_tensor_with_float16_0D_scale.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
dequantizeLinear.https.any.js dequantizeLinear int8 0D constant tensor with float16 0D scale, trtx
 dequantizeLinear :: dequantizeLinear int8 0D constant tensor with float16 0D scale: index 0: actual=0 expected=134.375 ulp=22579 tolerance=16
  inputs: dequantizeLinearInput: [123] (constant); dequantizeLinearScale: [1.1201171875] (constant); dequantizeLinearZeroPoint: [3] (constant)
  expected dequantizeLinearOutput: [134.375]
  actual dequantizeLinearOutput: [0]

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: i8[] @bytes([123]);
    operand_1: f16[] @bytes([123, 60]);
    operand_2: i8[] @bytes([3]);
  }

  nodes {
    [dequantizeLinearOutput] = dequantizeLinear(operand_0, operand_1, operand_2, label="");
  }

  outputs { dequantizeLinearOutput; }
}
