tests/snapshots/run_wpt_conformance__trtx_dequantizeLinear_uint4_1D_tensor_of_even_size_with_float16_1D_scale.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
dequantizeLinear.https.any.js dequantizeLinear uint4 1D tensor of even size with float16 1D scale, trtx
 dequantizeLinear :: dequantizeLinear uint4 1D tensor of even size with float16 1D scale: index 0: actual=268.75 expected=16.796875 ulp=4096 tolerance=4
  inputs: dequantizeLinearInput: [15, 0]; dequantizeLinearScale: [1.1201171875, 1.1201171875] (constant); dequantizeLinearZeroPoint: [0, 1] (constant)
  expected dequantizeLinearOutput: [16.796875, -1.1201172]
  actual dequantizeLinearOutput: [268.75, -1.1201172]
  expected dequantizeLinearOutput full nd:
(shape [2])
[16.796875, -1.1201172]
  actual dequantizeLinearOutput full nd:
(shape [2])
[268.75, -1.1201172]

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    dequantizeLinearInput: u4[2];
  }

  consts {
    operand_1: f16[2] @bytes([123, 60, 123, 60]);
    operand_2: u4[2] @bytes([1]);
  }

  nodes {
    [dequantizeLinearOutput] = dequantizeLinear(dequantizeLinearInput, operand_1, operand_2, label="");
  }

  outputs { dequantizeLinearOutput; }
}
