tests/snapshots/run_wpt_conformance__trtx_dequantizeLinear_uint4_1D_tensor_of_even_size_with_float32_1D_scale.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
dequantizeLinear.https.any.js dequantizeLinear uint4 1D tensor of even size with float32 1D scale, trtx
 dequantizeLinear :: dequantizeLinear uint4 1D tensor of even size with float32 1D scale: index 0: actual=268.86594 expected=16.804121 ulp=33554432 tolerance=4
  inputs: dequantizeLinearInput: [15, 0]; dequantizeLinearScale: [1.120274782180786, 1.120274782180786] (constant); dequantizeLinearZeroPoint: [0, 1] (constant)
  expected dequantizeLinearOutput: [16.804121, -1.1202748]
  actual dequantizeLinearOutput: [268.86594, -1.1202748]
  expected dequantizeLinearOutput full nd:
(shape [2])
[16.804121, -1.1202748]
  actual dequantizeLinearOutput full nd:
(shape [2])
[268.86594, -1.1202748]

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    dequantizeLinearInput: u4[2];
  }

  consts {
    operand_1: f32[2] @bytes([42, 101, 143, 63, 42, 101, 143, 63]);
    operand_2: u4[2] @bytes([1]);
  }

  nodes {
    [dequantizeLinearOutput] = dequantizeLinear(dequantizeLinearInput, operand_1, operand_2, label="");
  }

  outputs { dequantizeLinearOutput; }
}
