tests/snapshots/run_wpt_conformance__trtx_dequantizeLinear_uint4_1D_tensor_of_odd_size_with_float16_1D_scale.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
dequantizeLinear.https.any.js dequantizeLinear uint4 1D tensor of odd size with float16 1D scale, trtx
 dequantizeLinear :: dequantizeLinear uint4 1D tensor of odd size with float16 1D scale: index 0: actual=0 expected=8.9609375 ulp=18555 tolerance=16
  inputs: dequantizeLinearInput: [10, 12, 14]; dequantizeLinearScale: [1.1201171875] (constant); dequantizeLinearZeroPoint: [2] (constant)
  expected dequantizeLinearOutput: [8.9609375, 11.203125, 13.4375]
  actual dequantizeLinearOutput: [0, 0, 0]
  expected dequantizeLinearOutput full nd:
(shape [3])
[8.9609375, 11.203125, 13.4375]
  actual dequantizeLinearOutput full nd:
(shape [3])
[0, 0, 0]

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    dequantizeLinearInput: u4[3];
  }

  consts {
    operand_1: f16[1] @bytes([123, 60]);
    operand_2: u4[1] @bytes([2]);
  }

  nodes {
    [dequantizeLinearOutput] = dequantizeLinear(dequantizeLinearInput, operand_1, operand_2, label="");
  }

  outputs { dequantizeLinearOutput; }
}
